[package]
name = "xmrsplayer"
version = "0.8.5"
edition = "2021"
description = "XMrsPlayer is a safe no-std soundtracker music player"
authors = ["Sebastien Bechet"]
documentation = "https://docs.rs/xmrsplayer"
repository = "https://codeberg.org/sbechet/xmrsplayer"

readme = "README.md"
license = "MIT"

keywords = ["xm", "module", "mod", "s3m", "soundtracker"]
categories = ["multimedia::audio", "embedded", "no-std"]

[dependencies]
xmrs = { version = "0.8.5", default-features = false }
clap = { version = "4.5", optional = true, features = ["cargo", "derive"] }
rodio =  { version = "0.19", optional = true }
console =  { version = "0.15", optional = true }
cpal =  { version = "0.15", optional = true }
num-traits = { version = "0.2",default-features = false, optional=true } # libm wrapper
micromath = { version = "2.1", optional=true }
hound = { version = "3.5", optional=true }

[features]
default = ["micromath"]
demo = ["std", "clap", "console", "cpal", "hound", "import", "sid"]
import = ["xmrs/import_amiga", "xmrs/import_s3m", "xmrs/import_sid", "xmrs/import_xm"]
libm = ["num-traits/libm", "xmrs/libm"]
micromath = ["dep:micromath", "xmrs/micromath"]
sid = ["xmrs/import_sid"]
std = ["xmrs/std", "use_f64"]
use_f64 = []

[lib]
name = "xmrsplayer"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "xmrsplayer"
path = "src/bin/cpal_player.rs"
required-features = [ "demo" ]
